Fixed texts not aligning properly

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -740,7 +740,7 @@ OUR SERVICES SEECTION
   }
   #search-input-media{
     padding: 15px 7px;
-    width: 230px;
+    width: 220px;
     position: relative;
     bottom: 35px;
     left: -25px;
@@ -863,6 +863,12 @@ DEPARTMENT SEECTION
 }
 #img_cardiology{
   width: 100%;
+}
+.cardiology_services, .Neurology_services,
+ .Diagnostics_services, .Dental_services,
+ .Ophthalmology_services, .Emergency_services, .Oncology_services{
+  margin: 16px 0;
+  display: block;
 }
 /**********************************  
 OUR SERVICES SEECTION 
@@ -1089,9 +1095,6 @@ OUR SERVICES SEECTION
   width: 400px;
   bottom: 0;
 }
-  #Departments_list, #Docs{
-    display: block;
-  }
 }
 
 /* Css Loader */
